--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-slick": "^0.29.0",
+    "react-toastify": "^10.0.4",
     "sass": "^1.68.0",
     "slick": "^1.12.2",
     "slick-carousel": "^1.8.1",
